Fix color contrast some more in privacy warning (#3018)
* Fix color contrast some more in privacy warning

Latest master appears to have changed the <strong> to this unreadable grey color. If you want that to be white then it should be pure white. If someone would rather revert this to that strong dark blue color it was before that would be good too.

* Make domain dark blue again

* add missing ;

woops

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -236,7 +236,7 @@
   font-weight: 400;
 
   strong {
-    color: darken($primary-text-color, 33%);
+    color: darken($ui-secondary-color, 65%);
     font-weight: 500;
   }
 
